--- a/readme.textile
+++ b/readme.textile
@@ -24,7 +24,7 @@ Bind an event function to the given target.
 h4. Example
 
 <pre><code>Events.bind(window, 'load', function(e) {
-	// Do something on page load
+    // Do something on page load
 });</code></pre>
 
 h3. void Events.unbind ( object target[, string event ])
@@ -34,6 +34,18 @@ Unbind event functions from the given target. If no event is given, all events w
 h4. Example
 
 <pre><code>Events.unbind(window, 'load');</code></pre>
+
+
+
+h3. void Events.log ( mixed item[, ... ])
+
+A standardized abstraction of @console.log()@. Prepends a human-readable timestamp to the output.
+
+h4. Exmaple
+
+<pre><code>Events.bind(window, 'load', function(e) {
+    Events.log('window onload event fired');
+});</code></pre>
 
 
 
